# lazyslurm

./: AGENTS.md  Cargo.toml
.github/workflows/: release.yml
dev/: Dockerfile
src/: main.rs
src/models/: job.rs  mod.rs  partition.rs  user_limits.rs
src/slurm/: commands.rs  parser.rs
src/ui/: app.rs  cluster.rs  components.rs  events.rs  help.rs  mod.rs
