[package]
name = "lazyslurm"
version = "0.3.0"
edition = "2024"
description = "A terminal UI for monitoring and managing slurm jobs"
license = "MIT"
authors = ["Tom Hill <tom@hill.xyz>"]
repository = "https://github.com/hill/lazyslurm"
homepage = "https://github.com/hill/lazyslurm"
documentation = "https://docs.rs/lazyslurm"
readme = "README.md"
keywords = ["slurm", "hpc", "terminal", "tui", "cluster"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["dev/", ".github/", "*.png", "*.jpg"]

[[bin]]
name = "lazyslurm"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# CLI argument parsing
clap = { version = "4.6", features = ["derive"] }

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Regex for parsing
regex = "1.12"

# Static data
strum = { version = "0.28", features = ["derive"] }
[profile.dev]
opt-level = 0
debug = true
incremental = true
